service and content

--- a/index.html
+++ b/index.html
@@ -190,6 +190,74 @@
                 </button>
             </div>
         </section>
+        <section id="service">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3 text-center py-4">
+                        <div class="service__icon mb-3">
+                            <img src="./images/service_time.jpg" alt="">
+                        </div>
+                        <h3 class="mb-2 text-uppercase">Thời gian làm việc</h3>
+                        <div class="service__content">
+                            <i>8h sáng - đến 20h tối</i>
+                        </div>
+                    </div>
+                    <div class="col-md-3 text-center py-4">
+                        <div class="service__icon mb-3">
+                            <img src="./images/service_car.jpg" alt="">
+                        </div>
+                        <h3 class="mb-2 text-uppercase">Giao hàng miễn phí</h3>
+                        <div class="service__content">
+                            <i>Với hóa đơn từ 1 triệu trở lên</i>
+                        </div>
+                    </div>
+                    <div class="col-md-3 text-center py-4">
+                        <div class="service__icon mb-3">
+                            <img src="./images/service_exchange.jpg" alt="">
+                        </div>
+                        <h3 class="mb-2 text-uppercase">Đổi trả miễn phí</h3>
+                        <div class="service__content">
+                            <i>Đổi trả trong vòng 3 ngày</i>
+                        </div>
+                    </div>
+                    <div class="col-md-3 text-center py-4">
+                        <div class="service__icon mb-3">
+                            <img src="./images/service_call.jpg" alt="">
+                        </div>
+                        <h3 class="mb-2 text-uppercase">Hỗ trợ online</h3>
+                        <div class="service__content">
+                            <i>8h sáng - đến 20h tối</i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="ads">
+                            <div class="ads__hot">
+                                <img src="./images/hot.png" alt="">
+                            </div>
+                            <div class="ads_img">
+                                <img src="./images/ads.jpg" alt="" class="img-fluid">
+                            </div>
+                            <div class="ads__bg">&nbsp;</div>
+                            <div class="ads__text text-uppercase text-center py-2">
+                                Nhận ưu đãi <br> khi mua hàng online
+                            </div>
+                        </div>
+                        <div class="bestSellers"></div>
+                        <div class="discountProducts"></div>
+                        <div class="posts"></div>
+                    </div>
+                    <div class="col-md-9">
+                        b
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
